Update and rename Html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<head>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>My First Webpage</title>
+  </head>
+  <body>
 <title>My Webpage</title>
 <h2>
   - My Webpage -
@@ -29,4 +37,7 @@
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id=linked>Guess What?</a>
   </list>
 </ul>
-</head>
+</body>
+
+</html>
+
